--- a/style.css
+++ b/style.css
@@ -558,9 +558,12 @@ footer {
 
     #access {
         padding-top: 50px;
-        width: 350px;
+        width: 320px;
         margin: 0 auto;
     }
+    
+    .map {
+        width: 320px;
 
 }
 
